--- a/base-template/package.json
+++ b/base-template/package.json
@@ -2,6 +2,10 @@
   "name": "fhevm-example-template",
   "version": "1.0.0",
   "description": "Base template for FHEVM Hardhat example projects",
+  "engines": {
+    "node": ">=20",
+    "npm": ">=7.0.0"
+  },
   "scripts": {
     "compile": "hardhat compile",
     "test": "hardhat test",
@@ -13,15 +17,29 @@
     "node": "hardhat node"
   },
   "dependencies": {
-    "@fhevm/solidity": "^1.0.0",
-    "ethers": "^6.8.0"
+    "@fhevm/solidity": "^0.9.1",
+    "ethers": "^6.15.0",
+    "encrypted-types": "^0.0.4"
   },
   "devDependencies": {
-    "@nomicfoundation/hardhat-toolbox": "^3.0.0",
-    "@nomiclabs/hardhat-etherscan": "^3.1.0",
-    "@types/node": "^20.0.0",
+    "@fhevm/hardhat-plugin": "^0.3.0-1",
+    "@nomicfoundation/hardhat-chai-matchers": "^2.1.0",
+    "@nomicfoundation/hardhat-ethers": "^3.1.0",
+    "@nomicfoundation/hardhat-network-helpers": "^1.1.0",
+    "@nomicfoundation/hardhat-verify": "^2.1.0",
+    "@typechain/ethers-v6": "^0.5.1",
+    "@typechain/hardhat": "^9.1.0",
+    "@types/chai": "^4.3.20",
+    "@types/mocha": "^10.0.10",
+    "@types/node": "^20.19.8",
+    "@zama-fhe/relayer-sdk": "^0.3.0-5",
+    "chai": "^4.5.0",
+    "chai-as-promised": "^8.0.1",
     "dotenv": "^16.3.1",
-    "hardhat": "^2.17.0",
-    "typescript": "^5.2.0"
+    "hardhat": "^2.26.0",
+    "hardhat-deploy": "^0.11.45",
+    "ts-node": "^10.9.2",
+    "typechain": "^8.3.2",
+    "typescript": "^5.8.3"
   }
 }
